[gd_scene load_steps=19 format=2]

[ext_resource path="res://entities/sky_traffic/phoenix.tscn" type="PackedScene" id=1]
[ext_resource path="res://entities/icarus/icarus.tscn" type="PackedScene" id=2]
[ext_resource path="res://entities/sky_traffic/apollo.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/sky_ui.png" type="Texture" id=4]
[ext_resource path="res://assets/cloud.png" type="Texture" id=5]
[ext_resource path="res://scenes/minigames/falling_from_sky/icarus_controller.gd" type="Script" id=6]
[ext_resource path="res://scenes/minigames/falling_from_sky/falling_from_sky.gd" type="Script" id=7]
[ext_resource path="res://scenes/minigames/falling_from_sky/Borders.gd" type="Script" id=8]
[ext_resource path="res://ui/instructions/instructions.tscn" type="PackedScene" id=9]
[ext_resource path="res://scenes/minigames/falling_from_sky/LinearRandSpawner.gd" type="Script" id=10]

[sub_resource type="CanvasItemMaterial" id=1]
particles_animation = true
particles_anim_h_frames = 5
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 1, 33, 30, 74 )

[sub_resource type="Curve2D" id=3]
resource_local_to_scene = true
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -78, 66, 0, 0, 0, 0, -78, 368 )
}

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 31.846, 29.0345 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 329.25, 17.5 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 32.125, 206.5 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 456, 14.5 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 43.5625, 317 )

[node name="Scene" type="Node2D"]
script = ExtResource( 7 )

[node name="CloudsRight" type="CPUParticles2D" parent="."]
visible = false
material = SubResource( 1 )
position = Vector2( 647, 399 )
randomness = 0.36
texture = ExtResource( 5 )
emission_shape = 1
emission_sphere_radius = 79.41
direction = Vector2( 0, -3 )
spread = 15.0
gravity = Vector2( 0, 0 )
initial_velocity = 552.55
anim_speed = 1.0
anim_offset = 0.26
anim_offset_random = 0.32

[node name="CloudsLeft" type="CPUParticles2D" parent="."]
visible = false
material = SubResource( 1 )
position = Vector2( -17, 405 )
randomness = 0.36
texture = ExtResource( 5 )
emission_shape = 1
emission_sphere_radius = 79.41
direction = Vector2( 0, -3 )
spread = 15.0
gravity = Vector2( 0, 0 )
initial_velocity = 552.55
anim_speed = 1.0
anim_offset = 0.26
anim_offset_random = 0.32

[node name="Icarus" parent="." instance=ExtResource( 2 )]
position = Vector2( 253, 267 )
script = ExtResource( 6 )
acceleration_weight = 0.11
max_speed = 300

[node name="Enemies" type="Node2D" parent="."]

[node name="SkyUi" type="Sprite" parent="."]
position = Vector2( 309, 426 )
texture = ExtResource( 4 )

[node name="Progress" type="NinePatchRect" parent="."]
margin_left = 604.0
margin_top = 7.0
margin_right = 628.0
margin_bottom = 353.0
texture = SubResource( 2 )
patch_margin_left = 12
patch_margin_top = 34
patch_margin_right = 12
patch_margin_bottom = 13

[node name="path" type="Path2D" parent="Progress"]
position = Vector2( 90, -36 )
curve = SubResource( 3 )

[node name="amt" type="PathFollow2D" parent="Progress/path"]
position = Vector2( -78, 66 )
rotate = false
loop = false

[node name="icon" type="Sprite" parent="Progress/path/amt"]
texture = SubResource( 4 )

[node name="PlayerBorder" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerBorder"]
position = Vector2( 318, -17 )
shape = SubResource( 5 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="PlayerBorder"]
position = Vector2( 321, 390 )
shape = SubResource( 5 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="PlayerBorder"]
position = Vector2( -38.125, 185 )
shape = SubResource( 6 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="PlayerBorder"]
position = Vector2( 679, 188.5 )
shape = SubResource( 6 )

[node name="Borders" type="Area2D" parent="."]
script = ExtResource( 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Borders"]
position = Vector2( 327, -141 )
shape = SubResource( 7 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Borders"]
position = Vector2( 323, 479.5 )
shape = SubResource( 7 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Borders"]
position = Vector2( -176.438, 182 )
shape = SubResource( 8 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Borders"]
position = Vector2( 821, 171 )
shape = SubResource( 8 )

[node name="PhonenixSpawnerRight" type="Node2D" parent="."]
script = ExtResource( 10 )

[node name="Upper" parent="PhonenixSpawnerRight" instance=ExtResource( 1 )]
position = Vector2( 745, 7 )

[node name="Lower" parent="PhonenixSpawnerRight" instance=ExtResource( 1 )]
position = Vector2( 739, 361 )

[node name="PhonenixSpawnerLeft" type="Node2D" parent="."]
position = Vector2( -843, -6 )
script = ExtResource( 10 )

[node name="Upper" parent="PhonenixSpawnerLeft" instance=ExtResource( 1 )]
position = Vector2( 744, 17 )

[node name="Lower" parent="PhonenixSpawnerLeft" instance=ExtResource( 1 )]
position = Vector2( 739, 361 )

[node name="ApolloSpawnerRight" type="Node2D" parent="."]
script = ExtResource( 10 )

[node name="Upper" parent="ApolloSpawnerRight" instance=ExtResource( 3 )]
position = Vector2( 1231, 24 )
__meta__ = {
"_edit_pinned_properties_": [ "position" ]
}

[node name="Lower" parent="ApolloSpawnerRight" instance=ExtResource( 3 )]
position = Vector2( 1225, 331 )
__meta__ = {
"_edit_pinned_properties_": [ "position" ]
}

[node name="ApolloSpawnerLeft" type="Node2D" parent="."]
position = Vector2( 399, 10 )
scale = Vector2( -1, 1 )
script = ExtResource( 10 )

[node name="Upper" parent="ApolloSpawnerLeft" instance=ExtResource( 3 )]
position = Vector2( 1231, 24 )
__meta__ = {
"_edit_pinned_properties_": [ "position" ]
}

[node name="Lower" parent="ApolloSpawnerLeft" instance=ExtResource( 3 )]
position = Vector2( 1225, 331 )
__meta__ = {
"_edit_pinned_properties_": [ "position" ]
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Instructions" parent="CanvasLayer" instance=ExtResource( 9 )]
pause_mode = 2
description = "Icarus flew too high, now he's gotta get down safely.

ARROW KEYS or WASD to move. Try and make it to the bottom while avoiding air traffic!"

[connection signal="closed" from="CanvasLayer/Instructions" to="." method="_on_Instructions_closed"]
